--- a/frontend/sample.env
+++ b/frontend/sample.env
@@ -1,1 +1,1 @@
-SOURCE=http://localhost:8081/sample.json
+REACT_APP_API='https://raw.githubusercontent.com/Covid19-Project-Team/covid19riskme/master/backend/sample.json'
